Changes in lmfit-2.7

- eliminate unncessary wa1 = -wa1 computation
- avoid passing wa3 to wa1, choose better names for work arrays in lm_par

Changes in lmfit-2.6, released 29sep09:

- nfev incrementation even if printout=0 (bug report Chr. Tanner)
- correct t->tvec, y->yvec in man page  (bug report Chr. Tanner)

Changes in lmfit-2.5, released 20sep09:

- malloc==NULL ? (suggestion Robert Strickland)
- allow printout=NULL (suggestion J. Lodewyck)
- improve infmsg (correspondence B. McHoull)
- eliminate some static variables (p25, p5, p75, ..)
- elimiate function data types; they obscure more than they help

Changes in lmfit-2.4, released 27jul2008:

- clearer file headers
- clearer licence (everything has ever been in the public domain)
- machine-dependent arithmetic constants from float.h (suggestion M. Bydder)
- minor improvements of comments

Changes in lmfit-2.3, released 5apr2008:

- fixed bug 1817631: replaced confusing variable names in lmmin.c:lm_qrsolv()
- accepted feature request 1814970: inclusion protection in headers
- accepted feature request 1814976: cplusplus wrapper in headers
- fixed bug 1868399: typos in debug messages
- accepted proposal from Mark Bydder:
     improved calculation of differences in lmmin, lines 415-417
- reverted comments in lmmin.c to pure C style
- improved documentation of interfaces

Changes up to lmfit-2.2, released 20sep2007:

- no change log has been maintained,
  there are just the sourceforge release notes